[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychaos"
version = "0.1.0"
description = "Modular workflow execution engine with PostgreSQL tracking and A2A protocol support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ajlinhard" }]
keywords = ["workflow", "tasks", "a2a", "pydantic", "sqlalchemy"]

dependencies = [
    # Core DB
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Pydantic ecosystem
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai[openai]>=0.0.14",
    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pychaos"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src/pychaos --cov-report=term-missing"
markers = [
    "unit: pure unit tests, no external deps",
    "integration: requires a live postgres instance",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/pychaos"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
